<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/validation"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#000"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edtReference"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_white"
        android:hint="@string/reference"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:text="@string/validate_button"
        android:id="@+id/btnValidate"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/button_blue"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>