<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/blocPays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@color/connexion_background"
            android:padding="10dp"
            android:text="@string/pays"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spnPays"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blocOperateur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@color/connexion_background"
            android:padding="10dp"
            android:text="@string/operateur"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/connexion_background">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:isScrollContainer="true"
                android:orientation="horizontal" />

        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blocInfos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCode"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#DDD"
                android:gravity="center"
                android:text="237"
                android:textColor="#000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_white"
                android:hint="@string/numero"
                android:inputType="number"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnPayer"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_border_blue"
        android:text="Payer"
        android:textAllCaps="false"
        android:textColor="@color/myblue"
        android:textSize="20sp" />

</LinearLayout>